--- a/lists,tuples,sets.ipynb
+++ b/lists,tuples,sets.ipynb
@@ -27,8 +27,31 @@
     "students=[35,46,67,48,89]         # can store same datatype data\n",
     "print(type(students))\n",
     "\n",
-    "students1=[36,'mango',67.9,True]  # can store multiple data type data\n",
+    "students1=[36,'mango',67.9,True]  # can store multiple data type data and it is heterogeneous\n",
     "print(type(students1))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "c725e2c3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['t', 'h', 'i', 's', ' ', 'i', 's', ' ', 'l', 'i', 's', 't']\n",
+      "<class 'list'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "# string into list\n",
+    "\n",
+    "list2=list(\"this is list\")\n",
+    "print(list2)\n",
+    "print(type(list2))"
    ]
   },
   {
@@ -100,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "04bd65bc",
    "metadata": {},
    "outputs": [
@@ -110,9 +133,10 @@
      "text": [
       "['mango', 'apple']\n",
       "['banana', 'mango']\n",
-      "['banana', 'mango', 'apple']\n",
+      "['banana', 'mango', 'apple', 'grapes', 'straberry']\n",
+      "['banana', 'apple', 'straberry']\n",
       "['banana', 'apple']\n",
-      "['apple', 'mango', 'banana']\n"
+      "['straberry', 'grapes', 'apple', 'mango', 'banana']\n"
      ]
     }
    ],
@@ -120,17 +144,18 @@
     "# slicing in lists\n",
     "# [start:stop:step]\n",
     "\n",
-    "fruits=['banana','mango','apple']\n",
+    "fruits=['banana','mango','apple','grapes','straberry']\n",
     "print(fruits[1:3])\n",
     "print(fruits[0:2])\n",
     "print(fruits[:])\n",
     "print(fruits[::2])\n",
+    "print(fruits[0:3:2])\n",
     "print(fruits[::-1])   # reverse a list"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "c8bd8b51",
    "metadata": {},
    "outputs": [
@@ -143,7 +168,7 @@
     }
    ],
    "source": [
-    "# lists are mutable in nature\n",
+    "# lists are mutable in nature - elements can be changed\n",
     "\n",
     "list2=[10,20,30,40]\n",
     "list2[0]=100\n",
@@ -152,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 5,
    "id": "855c2fb3",
    "metadata": {},
    "outputs": [
@@ -242,7 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "fb8ed3bc",
    "metadata": {},
    "outputs": [
@@ -253,7 +278,7 @@
       "2\n",
       "3\n",
       "[1, 2, 3]\n",
-      "5\n"
+      "6\n"
      ]
     }
    ],
@@ -262,7 +287,7 @@
     "\n",
     "nums=[10,60,78,89]\n",
     "print(nums.index(78))    # gives position of item\n",
-    "nums2=[1,2,3,2,2,]\n",
+    "nums2=[1,2,3,2,2,4]\n",
     "print(nums2.count(2))    # count occurs\n",
     "a=[1,2,3]\n",
     "b=a.copy()               # cresting a shallow copy\n",
@@ -311,10 +336,10 @@
     }
    ],
    "source": [
-    "# Tuples- it is used when you need the data safety, fixed records\n",
+    "# Tuples- it is used when you need data safety, fixed records, immutable in nature\n",
     "\n",
     "nums=(10,20,30)    # packing a tuple\n",
-    "print(nums[0])     # accessing a tuple element using index (unpackinf a tuple)\n"
+    "print(nums[0])     # accessing a tuple element using index (unpacking a tuple)\n"
    ]
   },
   {
@@ -393,7 +418,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "id": "34cd557b",
    "metadata": {},
    "outputs": [
@@ -406,10 +431,52 @@
     }
    ],
    "source": [
-    "# Sets \n",
+    "# Sets - it is the collection of unordered items and it must be unique and immutable. it removes duplicate elements\n",
     "\n",
     "numbers={10,20,20,40,10}\n",
     "print(numbers)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "651231d6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{1, 2, 3, 4}\n",
+      "<class 'set'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "numbers=set([1,2,3,4])\n",
+    "print(numbers)\n",
+    "print(type(numbers))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "e4e81ecd",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'h', 'i', 'e', 't', 'w'}\n",
+      "<class 'set'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "numbers=set(\"white\")\n",
+    "print(numbers)\n",
+    "print(type(numbers))"
    ]
   },
   {
@@ -441,6 +508,28 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "85a6110f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{1, 2, 3, 4}\n"
+     ]
+    }
+   ],
+   "source": [
+    "# removes duplicates\n",
+    "\n",
+    "a=[1,2,3,4,2,3,4,3]\n",
+    "b=set(a)\n",
+    "print(b)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 10,
    "id": "14f5983d",
    "metadata": {},
@@ -464,7 +553,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "9b78d47b",
    "metadata": {},
    "outputs": [
@@ -472,8 +561,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'e', 'a', 'b', 'c', 'red', 'i', 'l', 'h', 'yellow', 't', 'k', 'green'}\n",
-      "{'a', 'b', 'c', 'red', 'i', 'l', 'h', 'yellow', 't', 'k', 'green'}\n",
+      "{'blue', 'green'}\n",
       "set()\n"
      ]
     }
@@ -481,7 +569,7 @@
    "source": [
     "# removing random elements\n",
     "\n",
-    "print(colors)\n",
+    "colors=set([\"red\",\"green\",\"blue\"])\n",
     "colors.pop()\n",
     "print(colors)\n",
     "colors.clear()     # removes all the elements\n",
@@ -489,8 +577,25 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "6c6c28de",
+   "metadata": {},
+   "source": [
+    "Method\t                        Meaning\t                      Example\t                 Output\n",
+    "union()\t                 Combines elements from both\t        A.union(B)\t         {1,2,3,4,5,6,7,8}\n",
+    "intersection()\t             Common elements\t                A.intersection(B)\t      {4,5}\n",
+    "difference()\t         Elements only in A\t                 A.difference(B)\t         {1,2,3}\n",
+    "symmetric_difference()\t   Elements not in both\t          A.symmetric_difference(B)\t   {1,2,3,6,7,8}\n",
+    "update()\t            Adds items from another set to A\t    A.update(B)\t            modifies A\n",
+    "difference_update()\t      Removes common elements\t         A.difference_update(B)\t    modifies A\n",
+    "issubset()\t           True if all of A in B\t           {1,2}.issubset(A)\t           True\n",
+    "issuperset()\t       True if A contains all of B\t         A.issuperset({1,2})\t       True\n",
+    "isdisjoint()\t       True if no common elements\t        {9,10}.isdisjoint(A)\t        True"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "e0cb360d",
    "metadata": {},
    "outputs": [
@@ -501,11 +606,17 @@
       "{1, 2, 3, 4, 5, 6}\n",
       "set()\n",
       "{1, 2, 3}\n",
-      "{1, 2, 3, 4, 5, 6}\n"
+      "{1, 2, 3, 4, 5, 6}\n",
+      "None\n",
+      "True\n",
+      "True\n",
+      "True\n"
      ]
     }
    ],
    "source": [
+    "# set operations\n",
+    "\n",
     "a={1,2,3}\n",
     "b={4,5,6}\n",
     "\n",
@@ -522,18 +633,29 @@
     "# difference\n",
     "# a - b\n",
     "\n",
-    "print(a.difference(b))                   # elements in A not in a\n",
+    "print(a.difference(b))                   # elements in A not in B\n",
     "\n",
     "# symmetric difference\n",
     "# a ^ b\n",
     "\n",
     "print(a.symmetric_difference(b))         # elements in either but not both\n",
+    "\n",
+    "print(a.difference_update(b))            # Removes common elements\n",
+    "\n",
+    "A={1,2}\n",
+    "B={2,3,4,1,5}\n",
+    "\n",
+    "print(A.issubset(B))                    # True if all of A in B\n",
+    "\n",
+    "print(B.issuperset(A))                  # True if B contains all of A\n",
+    "\n",
+    "print(A.isdisjoint(b))                  # True if no common elements\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": null,
    "id": "d3722128",
    "metadata": {},
    "outputs": [
@@ -546,7 +668,7 @@
     }
    ],
    "source": [
-    "# Dictionaries- \n",
+    "# Dictionaries- they are ordered, changable and does not allows duplicates and keys appears only once.\n",
     "\n",
     "student={\"name\":\"Alex\",\"age\":22,\"marks\":85}\n",
     "print(student[\"name\"])                      # calling and accessing the data through key instead of index"
@@ -586,7 +708,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": null,
    "id": "31cfcbc1",
    "metadata": {},
    "outputs": [
@@ -601,7 +723,7 @@
     }
    ],
    "source": [
-    "# Keys\n",
+    "# Keys Values and Items\n",
     "\n",
     "print(student.keys())      # Gives only keys \n",
     "print(student.values())    # Gives only values\n",
@@ -655,7 +777,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 7,
    "id": "883bebf1",
    "metadata": {},
    "outputs": [
@@ -663,7 +785,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Sam\n"
+      "Alex\n"
      ]
     }
    ],
@@ -671,7 +793,7 @@
     "# list of dictionaries\n",
     "\n",
     "students=[{\"name\":\"Alex\",\"marks\":85},{\"name\":\"Sam\",\"marks\":90}]\n",
-    "print(students[1][\"name\"])"
+    "print(students[0][\"name\"])"
    ]
   },
   {
@@ -781,7 +903,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 1,
    "id": "1adf5933",
    "metadata": {},
    "outputs": [
@@ -804,12 +926,141 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "8d5dd263",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{1, 2, 3, 4}\n"
+     ]
+    }
+   ],
    "source": [
-    "# set methods()\n"
+    "# obtaining unique values using set methods\n",
+    "\n",
+    "data=[1,2,3,4,3,3,2,2]\n",
+    "data1=set(data)\n",
+    "print(data1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "a25c657a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'Bob'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Finding common customers in both regions using set operations\n",
+    "\n",
+    "regionA={\"Alex\",\"Bob\",\"charlie\"}\n",
+    "regionB={\"Bob\",\"Dina\",\"Eve\"}\n",
+    "print(regionA.intersection(regionB))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b6f3d33c",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "086778f2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "7\n",
+      "-1\n",
+      "i like mango\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Finding and Replacing\n",
+    "\n",
+    "text=\"python programming\"\n",
+    "print(text.find(\"prog\"))                    # find position of subtracting, returns index if found\n",
+    "print(text.find(\"ko\"))                      # if not found returns -1\n",
+    "text=\"i like python\"\n",
+    "print(text.replace(\"python\",\"mango\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "3a54a021",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "True\n",
+      "True\n",
+      "False\n",
+      "True\n",
+      "6\n",
+      "3\n"
+     ]
+    }
+   ],
+   "source": [
+    "# checking content\n",
+    "\n",
+    "text=\"Python\"\n",
+    "print(text.startswith(\"Py\"))\n",
+    "print(text.endswith(\"on\"))\n",
+    "print(text.isalpha())               # is the string only letters\n",
+    "print(text.isdigit())               # is the string only digits\n",
+    "print(text.isalnum())               # is the string consisting of both alphabets and numbers\n",
+    "\n",
+    "# length and counting\n",
+    "\n",
+    "text=\"python\"\n",
+    "print(len(text))\n",
+    "text2=\"banana\"\n",
+    "print(text2.count(\"a\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "e58e4a67",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n",
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "# checking membership (in, not in)\n",
+    "\n",
+    "text3=\"python\"\n",
+    "print(\"py\" in text)\n",
+    "print(\"java\" not in text)"
    ]
   }
  ],
