new changes made

--- a/Loops and interatin 1.ipynb
+++ b/Loops and interatin 1.ipynb
@@ -255,6 +255,263 @@
     "for i in range(0,11,2):\n",
     "    print(i)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8bf510b2",
+   "metadata": {},
+   "source": [
+    "For Loop Excercise-\n",
+    "\n",
+    "1. Create a list of sales amount values, take a variable to calculate sum of each element in the list and print the total amount\n",
+    "\n",
+    "sales=[150,200,75,310,50]\n",
+    "\n",
+    "2. Count number of items in a list using for loop and print count\n",
+    "\n",
+    "items=[\"apple\",\"banana\",\"mango\",\"grapes\"]\n",
+    "\n",
+    "3. take a list of scores calculate total scores and print both total and average scores.\n",
+    "\n",
+    "4. take a string as \"Python\" count letters in it and print the total letter count in a string."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "d7f8be43",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "785\n"
+     ]
+    }
+   ],
+   "source": [
+    "sales=[150, 200, 75, 310, 50]\n",
+    "total=0\n",
+    "for amount in sales:\n",
+    "    total=amount+total\n",
+    "print(total)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c6d00bf1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of items: 4\n"
+     ]
+    }
+   ],
+   "source": [
+    "items = [\"apple\", \"banana\", \"mango\", \"grapes\"]\n",
+    "count = 0\n",
+    "for item in items:\n",
+    "    count = count + 1\n",
+    "\n",
+    "print(\"Number of items:\", count)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "ac741fb2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Total Score: 433\n",
+      "Average Score: 86.6\n"
+     ]
+    }
+   ],
+   "source": [
+    "scores=[85, 90, 78, 88, 92]\n",
+    "\n",
+    "total=0\n",
+    "count=0\n",
+    "\n",
+    "for score in scores:\n",
+    "    total=total+score\n",
+    "    count=count+1\n",
+    "\n",
+    "average=total/count \n",
+    "\n",
+    "print(\"Total Score:\", total)\n",
+    "print(\"Average Score:\", average)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "959ae0fc",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Total number of letters: 6\n"
+     ]
+    }
+   ],
+   "source": [
+    "text=\"Python\"\n",
+    "count=0\n",
+    "\n",
+    "for letter in text:\n",
+    "    count=count+1\n",
+    "\n",
+    "print(\"Total number of letters:\", count)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "f0223371",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n"
+     ]
+    }
+   ],
+   "source": [
+    "# count only items greater than 50\n",
+    "\n",
+    "items=[50,60,70,80,30,40]\n",
+    "count=0\n",
+    "\n",
+    "for i in items:\n",
+    "    if i>50:\n",
+    "        count=count+1\n",
+    "print(count)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "81ed0930",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5\n"
+     ]
+    }
+   ],
+   "source": [
+    "# count only even numbers\n",
+    "\n",
+    "numbers = [1,2,3,4,6,10,1,11,18]\n",
+    "count=0\n",
+    "\n",
+    "for num in numbers:\n",
+    "    if num%2==0:\n",
+    "        count=count+1\n",
+    "print(count)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "80921df9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n"
+     ]
+    }
+   ],
+   "source": [
+    "# count non empty values\n",
+    "\n",
+    "data=[\"apple\",\"\",\"banana\",\"\",\"mango\"]\n",
+    "count=0\n",
+    "\n",
+    "for item in data:\n",
+    "    if item:\n",
+    "        count=count+1\n",
+    "print(count)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "e2bca810",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "80 - Low\n",
+      "150 - High\n",
+      "60 - Low\n",
+      "200 - High\n"
+     ]
+    }
+   ],
+   "source": [
+    "# print high or low\n",
+    "# print high for sale > 100 low for sales < 100\n",
+    "\n",
+    "sales=[80,150,60,200]\n",
+    "\n",
+    "for sale in sales:\n",
+    "    if sale>100:\n",
+    "        print(sale,\"- High\")\n",
+    "    else:\n",
+    "        print(sale,\"- Low\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "4b699af5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[10, 'missing', 20, 'missing', 30]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# repleace value \n",
+    "# replace 0 with missing\n",
+    "\n",
+    "data=[10,0,20,0,30]\n",
+    "cleaned_data=[]\n",
+    "\n",
+    "for value in data:\n",
+    "    if value ==0:\n",
+    "        cleaned_data.append(\"missing\")\n",
+    "    else:\n",
+    "        cleaned_data.append(value)\n",
+    "print(cleaned_data)"
+   ]
   }
  ],
  "metadata": {
